--- a/pages/ind-futbol.html
+++ b/pages/ind-futbol.html
@@ -28,7 +28,8 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png"
+                        alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -84,40 +85,148 @@
             <h2>Galeria de Diseños</h2>
             <div class="galeria__container" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta1.jpg" alt="camiseta 1">
-                    <div class="camiseta__desc">Camiseta Sublimada 1</div>
+                    <img src="../img/fotos-futbol/camiseta1.jpg" alt="camiseta futbol 1">
+                    <div class="camiseta__desc">Código: FS1</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta2.jpg" alt="camiseta 2">
-                    <div class="camiseta__desc">Camiseta Sublimada 2</div>
+                    <img src="../img/fotos-futbol/camiseta2.jpg" alt="camiseta futbol 2">
+                    <div class="camiseta__desc">Código: FS2</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta3.jpg" alt="camiseta 3">
-                    <div class="camiseta__desc">Camiseta Sublimada 3</div>
+                    <img src="../img/fotos-futbol/camiseta3.jpg" alt="camiseta futbol 3">
+                    <div class="camiseta__desc">Código: FS3</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta4.jpg" alt="camiseta 4">
-                    <div class="camiseta__desc">Camiseta Sublimada 4</div>
+                    <img src="../img/fotos-futbol/camiseta4.jpg" alt="camiseta futbol 4">
+                    <div class="camiseta__desc">Código: FS4</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta5.jpg" alt="camiseta 5">
-                    <div class="camiseta__desc">Camiseta Sublimada 5</div>
+                    <img src="../img/fotos-futbol/camiseta5.jpg" alt="camiseta futbol 5">
+                    <div class="camiseta__desc">Código: FS5</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta6.jpg" alt="camiseta 6">
-                    <div class="camiseta__desc">Camiseta Sublimada 6</div>
+                    <img src="../img/fotos-futbol/camiseta6.jpg" alt="camiseta futbol 6">
+                    <div class="camiseta__desc">Código: FS6</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta7.jpg" alt="camiseta 7">
-                    <div class="camiseta__desc">Camiseta Sublimada 7</div>
+                    <img src="../img/fotos-futbol/camiseta7.jpg" alt="camiseta futbol 7">
+                    <div class="camiseta__desc">Código: FS7</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta8.jpg" alt="camiseta 8">
-                    <div class="camiseta__desc">Camiseta Sublimada 8</div>
+                    <img src="../img/fotos-futbol/camiseta8.jpg" alt="camiseta futbol 8">
+                    <div class="camiseta__desc">Código: FS8</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-futbol/camiseta9.jpg" alt="camiseta 9">
-                    <div class="camiseta__desc">Camiseta Sublimada 9</div>
+                    <img src="../img/fotos-futbol/camiseta9.jpg" alt="camiseta futbol 9">
+                    <div class="camiseta__desc">Código: FS9</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta10.jpg" alt="camiseta futbol 10">
+                    <div class="camiseta__desc">Código: FS10</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta11.jpg" alt="camiseta futbol 11">
+                    <div class="camiseta__desc">Código: FS11</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta12.jpg" alt="camiseta futbol 12">
+                    <div class="camiseta__desc">Código: FS12</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta13.jpg" alt="camiseta futbol 13">
+                    <div class="camiseta__desc">Código: FS13</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta14.jpg" alt="camiseta futbol 14">
+                    <div class="camiseta__desc">Código: FS14</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta15.jpg" alt="camiseta futbol 15">
+                    <div class="camiseta__desc">Código: FS15</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta16.jpg" alt="camiseta futbol 16">
+                    <div class="camiseta__desc">Código: FS9</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta17.jpg" alt="camiseta futbol 17">
+                    <div class="camiseta__desc">Código: FS17</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta18.jpg" alt="camiseta futbol 18">
+                    <div class="camiseta__desc">Código: FS18</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta19.jpg" alt="camiseta futbol 19">
+                    <div class="camiseta__desc">Código: FS19</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta20.jpg" alt="camiseta futbol 20">
+                    <div class="camiseta__desc">Código: FS20</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta21.jpg" alt="camiseta futbol 21">
+                    <div class="camiseta__desc">Código: FS21</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta22.jpg" alt="camiseta futbol 22">
+                    <div class="camiseta__desc">Código: FS22</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta23.jpg" alt="camiseta futbol 23">
+                    <div class="camiseta__desc">Código: FS23</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta24.jpg" alt="camiseta futbol 24">
+                    <div class="camiseta__desc">Código: FS24</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta25.jpg" alt="camiseta futbol 25">
+                    <div class="camiseta__desc">Código: FS25</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta26.jpg" alt="camiseta futbol 26">
+                    <div class="camiseta__desc">Código: FS26</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta27.jpg" alt="camiseta futbol 27">
+                    <div class="camiseta__desc">Código: FS27</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta28.jpg" alt="camiseta futbol 28">
+                    <div class="camiseta__desc">Código: FS28</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta29.jpg" alt="camiseta futbol 29">
+                    <div class="camiseta__desc">Código: FS29</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta30.jpg" alt="camiseta futbol 30">
+                    <div class="camiseta__desc">Código: FS30</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta31.jpg" alt="camiseta futbol 31">
+                    <div class="camiseta__desc">Código: FS31</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta32.jpg" alt="camiseta futbol 32">
+                    <div class="camiseta__desc">Código: FS32</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta33.jpg" alt="camiseta futbol 33">
+                    <div class="camiseta__desc">Código: FS33</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta34.jpg" alt="camiseta futbol 34">
+                    <div class="camiseta__desc">Código: FS34</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta35.jpg" alt="camiseta futbol 35">
+                    <div class="camiseta__desc">Código: FS35</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-futbol/camiseta36.jpg" alt="camiseta futbol 36">
+                    <div class="camiseta__desc">Código: FS36</div>
                 </div>
             </div>
         </section>
@@ -132,46 +241,42 @@
     <!-- pie de página -->
 
     <footer>
-        <div class="container">
-            <div class="row fluid">
-                <div class="col col-sm-3 redes">
-                    <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
-                    <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
-                            class="bi bi-facebook"></i>/maharani.indumentaria</a>
-                    <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
-                            class="bi bi-instagram"></i>/maharani.indumentaria</a>
-                    <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
-                            class="bi bi-twitter"></i>/MaharaniIndume1</a>
-                </div>
-                <div class="col col-sm-3 pago">
-                    <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
-                    <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
-                </div>
-                <div class="col col-sm-3 envio">
-                    <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
-                    <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
-                    <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
-                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
-                        Argentino</a>
-                    <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
-                </div>
-                <div class="col col-sm-3 telefono">
-                    <p><i class="bi bi-phone"></i>Teléfono:</p>
-                    <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
-                                class="bi bi-whatsapp"></i></a>02926 -
-                        15 - 497162</p>
-                </div>
+        <div class="footer__info">
+            <div class="redes">
+                <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
+                <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
+                        class="bi bi-facebook"></i>/maharani.indumentaria</a>
+                <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
+                        class="bi bi-instagram"></i>/maharani.indumentaria</a>
+                <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
+                        class="bi bi-twitter"></i>/MaharaniIndume1</a>
             </div>
-            <div class="row fluid">
-                <div class="copyRigth">
-                    <strong>Maharani Indumentaria &copy; 2022</strong>
-                    <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
-                </div>
+            <div class="pago">
+                <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
+                <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
             </div>
+            <div class="envio">
+                <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
+                <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
+                <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
+                <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
+                    Argentino</a>
+                <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
+            </div>
+            <div class="telefono">
+                <p><i class="bi bi-phone"></i>Teléfono:</p>
+                <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
+                            class="bi bi-whatsapp"></i></a>02926 -
+                    15 - 497162</p>
+            </div>
+        </div>
+        <div class="footer__copyRigth">
+            <strong>Maharani Indumentaria &copy; 2022</strong>
+            <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
         </div>
     </footer>
 
-  <!-- scripts -->
+    <!-- scripts -->
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
