--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,8 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png"
+                        alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -74,68 +75,75 @@
     </header>
 
     <main>
-        <!-- grid system de BS -->
 
-        <div class="container">
-            <div class="row">
-                <section class="titulo" data-aos="fade-down">
-                    <h1>¿Cómo Contactarnos?</h1>
-                </section>
-                <section class="datos">
-                    <div>
-                        <h2>Nuestros Datos</h2>
-                    </div>
-                    <div>
-                        <h3>Dirección</h3>
-                        <p>Simón Bolívar 637, CP 7540 Coronel Suárez <br> Provincia de Buenos Aires</p>
-                    </div>
-                    <div>
-                        <h3>Teléfono</h3>
-                        <p> 
-                           <a href="tel:+5492926497162">02926 15 497162 </a><a href="https://api.whatsapp.com/send?phone=5492926497162&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20productos%20." target="_blank"><i class="bi bi-whatsapp"></i></a>
-                        </p>
-                    </div>
-                    <div>
-                        <h3>Correo Electrónico</h3>
-                        <p>
-                            <a href="mailto:maharaniindumentaria&commat;hotmail&period;com">maharaniindumentaria&commat;hotmail&period;com</a>
-                        </p>
-                    </div>
-                    <div class="ubicacion">
-                        <h2>¿Dónde Estamos?</h2>
-                        <div class="mapouter"><iframe
-                                src="https://maps.google.com/maps?q=bolivar%20637,%20coronel%20suarez,%20&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed"
-                                id="gmap_canvas"></iframe>
-                        </div>
-                    </div>
-                </section>
-
-                <div class="contacto">
-                    <div class="formulario">
-                        <h2>Envianos un mensaje</h2>
-                        <h3>Completá tus datos</h3>
-                        <form action="https://formsubmit.co/maharaniindumentaria@hotmail.com" method="POST">
-                            <input type="hidden" name="_subject" value="Consulta desde la Web">
-                        <input type="hidden" name="_next" value="https://maharaniindumentaria.com.ar/pages/thanks.html">
-                            <label for="nombre" class="colocar_nombre">Nombre y Apellido<span class="obligatorio">*</span></label>
-                            <input type="text" name="name" id="nombre" required placeholder="Escribí tu nombre">
-                            <label for="email" class="colocar_email">Email<span class="obligatorio">*</span></label>
-                            <input type="email" name="email" id="email" required placeholder="Escribí tu Correo Electrónico">
-                            <label for="telefono" class="colocar_telefono">Teléfono Celular</label>
-                            <input type="tel" name="phone" id="telefono" placeholder="Código de área sin 0 y teléfono celular sin 15">
-                            <label for="asunto" class="colocar_asunto">Asunto<span class="obligatorio">*</span></label>
-                            <input type="text" name="_subject" id="asunto" required placeholder="Motivo de tu consulta">
-                            <label for="mensaje" class="colocar_mensaje">Mensaje<span class="obligatorio">*</span></label>
-                            <textarea name="message" class="texto_mensaje" id="mensaje" required placeholder="Deja tu comentario..."></textarea>
-                            <p class="advertencia">Luego de presionar enviar, por favor hace click en: <br> <b>"no soy un robot"</b></p>
-                            <button type="submit" id="enviar" class="btn_send2">Enviar</button>
-                            <p class="aviso"><span class="obligatorio"> * </span>los campos son obligatorios.</p>
-                        </form>
-                    </div>
+        <section class="titulo" data-aos="fade-down">
+            <h1>¿Cómo Contactarnos?</h1>
+        </section>
+        
+     <!-- datos de contacto -->
+    <div class="container_datos_contacto"> 
+        <section class="datos">
+            <div>
+                <h2>Nuestros Datos</h2>
+            </div>
+            <div>
+                <h3>Dirección</h3>
+                <p>Simón Bolívar 637, CP 7540 Coronel Suárez <br> Provincia de Buenos Aires</p>
+            </div>
+            <div>
+                <h3>Teléfono</h3>
+                <p>
+                    <a href="tel:+5492926497162">02926 15 497162 </a><a
+                        href="https://api.whatsapp.com/send?phone=5492926497162&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20productos%20."
+                        target="_blank"><i class="bi bi-whatsapp"></i></a>
+                </p>
+            </div>
+            <div>
+                <h3>Correo Electrónico</h3>
+                <p>
+                    <a
+                        href="mailto:maharaniindumentaria&commat;hotmail&period;com">maharaniindumentaria&commat;hotmail&period;com</a>
+                </p>
+            </div>
+            <div class="ubicacion">
+                <h2>¿Dónde Estamos?</h2>
+                <div class="mapouter"><iframe
+                        src="https://maps.google.com/maps?q=bolivar%20637,%20coronel%20suarez,%20&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed"
+                        id="gmap_canvas"></iframe>
                 </div>
             </div>
-        </div>
+        </section>
 
+        <!-- formulario de contacto -->
+
+        <div class="contacto">
+            <div class="formulario">
+                <h2>Envianos un mensaje</h2>
+                <h3>Completá tus datos</h3>
+                <form action="https://formsubmit.co/maharaniindumentaria@hotmail.com" method="POST">
+                    <input type="hidden" name="_subject" value="Consulta desde la Web">
+                    <input type="hidden" name="_next" value="https://maharaniindumentaria.com.ar/pages/thanks.html">
+                    <label for="nombre" class="colocar_nombre">Nombre y Apellido<span
+                            class="obligatorio">*</span></label>
+                    <input type="text" name="name" id="nombre" required placeholder="Escribí tu nombre">
+                    <label for="email" class="colocar_email">Email<span class="obligatorio">*</span></label>
+                    <input type="email" name="email" id="email" required placeholder="Escribí tu Correo Electrónico">
+                    <label for="telefono" class="colocar_telefono">Teléfono Celular</label>
+                    <input type="tel" name="phone" id="telefono"
+                        placeholder="Código de área sin 0 y teléfono celular sin 15">
+                    <label for="asunto" class="colocar_asunto">Asunto<span class="obligatorio">*</span></label>
+                    <input type="text" name="_subject" id="asunto" required placeholder="Motivo de tu consulta">
+                    <label for="mensaje" class="colocar_mensaje">Mensaje<span class="obligatorio">*</span></label>
+                    <textarea name="message" class="texto_mensaje" id="mensaje" required
+                        placeholder="Deja tu comentario..."></textarea>
+                    <p class="advertencia">Luego de presionar enviar, por favor hace click en: <br> <b>"no soy un
+                            robot"</b></p>
+                    <button type="submit" id="enviar" class="btn_send2">Enviar</button>
+                    <p class="aviso"><span class="obligatorio"> * </span>los campos son obligatorios.</p>
+                </form>
+            </div>
+        </div>
+    </div>
         <!-- botón volver arriba -->
 
         <button type="button" class="btn btn-floating btn-sm" id="btn-back-to-top">
@@ -146,42 +154,38 @@
     <!-- pie de página -->
 
     <footer>
-        <div class="container">
-            <div class="row fluid">
-                <div class="col col-sm-3 redes">
-                    <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
-                    <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
-                            class="bi bi-facebook"></i>/maharani.indumentaria</a>
-                    <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
-                            class="bi bi-instagram"></i>/maharani.indumentaria</a>
-                    <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
-                            class="bi bi-twitter"></i>/MaharaniIndume1</a>
-                </div>
-                <div class="col col-sm-3 pago">
-                    <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
-                    <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
-                </div>
-                <div class="col col-sm-3 envio">
-                    <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
-                    <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
-                    <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
-                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
-                        Argentino</a>
-                    <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
-                </div>
-                <div class="col col-sm-3 telefono">
-                    <p><i class="bi bi-phone"></i>Teléfono:</p>
-                    <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
-                                class="bi bi-whatsapp"></i></a>02926 -
-                        15 - 497162</p>
-                </div>
+        <div class="footer__info">
+            <div class="redes">
+                <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
+                <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
+                        class="bi bi-facebook"></i>/maharani.indumentaria</a>
+                <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
+                        class="bi bi-instagram"></i>/maharani.indumentaria</a>
+                <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
+                        class="bi bi-twitter"></i>/MaharaniIndume1</a>
             </div>
-            <div class="row fluid">
-                <div class="copyRigth">
-                    <strong>Maharani Indumentaria &copy; 2022</strong>
-                    <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
-                </div>
+            <div class="pago">
+                <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
+                <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
             </div>
+            <div class="envio">
+                <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
+                <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
+                <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
+                <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
+                    Argentino</a>
+                <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
+            </div>
+            <div class="telefono">
+                <p><i class="bi bi-phone"></i>Teléfono:</p>
+                <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
+                            class="bi bi-whatsapp"></i></a>02926 -
+                    15 - 497162</p>
+            </div>
+        </div>
+        <div class="footer__copyRigth">
+            <strong>Maharani Indumentaria &copy; 2022</strong>
+            <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
         </div>
     </footer>
 
