--- a/pages/ind-hockey.html
+++ b/pages/ind-hockey.html
@@ -84,16 +84,36 @@
             <h2>Galeria de Diseños</h2>
             <div class="galeria__container" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
                 <div class="camiseta">
-                    <img src="../img/fotos-hockey/camiseta1.jpg" alt="camiseta 1">
-                    <div class="camiseta__desc">Camiseta Sublimada 1</div>
+                    <img src="../img/fotos-hockey/camiseta1.jpg" alt="camiseta hockey 1">
+                    <div class="camiseta__desc">Código: HS1</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-hockey/camiseta2.jpg" alt="camiseta 2">
-                    <div class="camiseta__desc">Camiseta Sublimada 2</div>
+                    <img src="../img/fotos-hockey/camiseta2.jpg" alt="camiseta hockey 2">
+                    <div class="camiseta__desc">Código: HS2</div>
                 </div>
                 <div class="camiseta">
-                    <img src="../img/fotos-hockey/camiseta3.jpg" alt="camiseta 3">
-                    <div class="camiseta__desc">Camiseta Sublimada 3</div>
+                    <img src="../img/fotos-hockey/camiseta3.jpg" alt="camiseta hockey 3">
+                    <div class="camiseta__desc">Código: HS3</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-hockey/camiseta4.jpg" alt="camiseta hockey 4">
+                    <div class="camiseta__desc">Código: HS4</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-hockey/camiseta5.jpg" alt="camiseta hockey 5">
+                    <div class="camiseta__desc">Código: HS5</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-hockey/camiseta6.jpg" alt="camiseta hockey 6">
+                    <div class="camiseta__desc">Código: HS6</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-hockey/camiseta7.jpg" alt="camiseta hockey 7">
+                    <div class="camiseta__desc">Código: HS7</div>
+                </div>
+                <div class="camiseta">
+                    <img src="../img/fotos-hockey/camiseta8.jpg" alt="camiseta hockey 8">
+                    <div class="camiseta__desc">Código: HS8</div>
                 </div>
             </div>
         </section>
@@ -108,44 +128,40 @@
     <!-- pie de página -->
 
     <footer>
-        <div class="container">
-            <div class="row fluid">
-                <div class="col col-sm-3 redes">
-                    <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
-                    <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
-                            class="bi bi-facebook"></i>/maharani.indumentaria</a>
-                    <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
-                            class="bi bi-instagram"></i>/maharani.indumentaria</a>
-                    <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
-                            class="bi bi-twitter"></i>/MaharaniIndume1</a>
-                </div>
-                <div class="col col-sm-3 pago">
-                    <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
-                    <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
-                </div>
-                <div class="col col-sm-3 envio">
-                    <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
-                    <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
-                    <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
-                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
-                        Argentino</a>
-                    <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
-                </div>
-                <div class="col col-sm-3 telefono">
-                    <p><i class="bi bi-phone"></i>Teléfono:</p>
-                    <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
-                                class="bi bi-whatsapp"></i></a>02926 -
-                        15 - 497162</p>
-                </div>
+        <div class="footer__info">
+            <div class="redes">
+                <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
+                <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
+                        class="bi bi-facebook"></i>/maharani.indumentaria</a>
+                <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
+                        class="bi bi-instagram"></i>/maharani.indumentaria</a>
+                <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
+                        class="bi bi-twitter"></i>/MaharaniIndume1</a>
             </div>
-            <div class="row fluid">
-                <div class="copyRigth">
-                    <strong>Maharani Indumentaria &copy; 2022</strong>
-                    <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
-                </div>
+            <div class="pago">
+                <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
+                <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
+            </div>
+            <div class="envio">
+                <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
+                <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
+                <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
+                <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
+                    Argentino</a>
+                <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
+            </div>
+            <div class="telefono">
+                <p><i class="bi bi-phone"></i>Teléfono:</p>
+                <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
+                            class="bi bi-whatsapp"></i></a>02926 -
+                    15 - 497162</p>
             </div>
         </div>
-    </footer>
+        <div class="footer__copyRigth">
+            <strong>Maharani Indumentaria &copy; 2022</strong>
+            <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
+        </div>
+</footer>
 
    <!-- scripts -->
 
