--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -28,7 +28,8 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png"
+                        alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -74,60 +75,59 @@
     </header>
 
     <main>
-        <!-- grid system de BS -->
 
-        <div class="container">
-            <div class="row">
-                <section class="titulo" data-aos="fade-down">
-                    <h1>SOLICITUD DE PRESUPUESTO</h1>
-                </section>
-                <section class="presupuesto col-sm-3">
-                    <form action="https://formsubmit.co/maharaniindumentaria@hotmail.com" method="POST" enctype="multipart/form-data">
-                        <input type="hidden" name="_subject" value="Solicitud de Presupuesto desde la Web">
-                        <input type="hidden" name="_next" value="https://maharaniindumentaria.com.ar/pages/thanks.html">
-                        <h3>Por favor completa todos los datos:</h3>
-                        <label for="name">Nombre y Apellido</label>
-                        <input type="text" id="name" placeholder="Ingrese su/s Nombre/s y Apellido" name="name" required>
-                        <label for="email">Correo Electrónico</label>
-                        <input type="text" id="email" placeholder="Ingrese su E-Mail" name="email" required>
-                        <div class="club">
-                            <p>¿Representas a un Club o sos Particular?</p>
-                            <input type="radio" name="club" id="tipo_c" value="Club">
-                            <label for="tipo_c">Club</label>
-                            <input type="radio" name="particular" id="tipo_p" value="Particular">
-                            <label for="tipo_p">Particular</label>
-                            <br>
-                        </div>
-                        <div>
-                            <p>¿Para qué deporte quiere la indumentaria?</p>
-                            <select name="deporte" id="deporte" required>
-                                <option label="Selec. Disciplina"></option>
-                                <option id="futblol" value="Futbol">Futbol</option>
-                                <option id="hockey" value="Hockey">Hockey</option>
-                                <option id="polo" value="Polo">Polo</option>
-                                <option id="otras" value="otras">Otras disciplinas</option>
-                            </select>
-                            <label for="otra">Otras disciplinas:</label>
-                            <input type="text" id="otra" placeholder="Disciplina...">
-                        </div>
-                        <div>
-                            <label for="cantidad">Cantidad</label>
-                            <input type="number" id="cantidad" name="cantidad" placeholder="Cantidad" min="1" max="100" required>
-                        </div>
-                        <p>Adjuntá escudo y publicidades</p>
-                        <div class="btn_attach">
-                            <input type="file" name="attachment" accept="image/png, image/jpeg, application/pdf">
-                            <span>Adjuntar Archivos...</span>
-                        </div>
-                        <p>Revisa que todos los datos sean correctos antes de enviar!</p>
-                        <p class="advertencia">Luego de presionar enviar, por favor hace click en: <br> <b>"no soy un robot"</b></p>
-                        <button type="submit" class="btn_send">Enviar</button>
-                        <button type="reset" class="btn_del">Borrar todo</button>
-                    </form>
-                </section>
+        <section class="titulo" data-aos="fade-down">
+            <h1>SOLICITUD DE PRESUPUESTO</h1>
+        </section>
 
-            </div>
-        </div>
+        <!-- formulario -->
+        <section class="presupuesto">
+            <form action="https://formsubmit.co/maharaniindumentaria@hotmail.com" method="POST"
+                enctype="multipart/form-data">
+                <input type="hidden" name="_subject" value="Solicitud de Presupuesto desde la Web">
+                <input type="hidden" name="_next" value="https://maharaniindumentaria.com.ar/pages/thanks.html">
+                <h3>Por favor completa todos los datos:</h3>
+                <label for="name">Nombre y Apellido</label>
+                <input type="text" id="name" placeholder="Ingrese su/s Nombre/s y Apellido" name="name" required>
+                <label for="email">Correo Electrónico</label>
+                <input type="text" id="email" placeholder="Ingrese su E-Mail" name="email" required>
+                <div class="club">
+                    <p>¿Representas a un Club o sos Particular?</p>
+                    <input type="radio" name="club" id="tipo_c" value="Club">
+                    <label for="tipo_c">Club</label>
+                    <input type="radio" name="particular" id="tipo_p" value="Particular">
+                    <label for="tipo_p">Particular</label>
+                    <br>
+                </div>
+                <div>
+                    <p>¿Para qué deporte quiere la indumentaria?</p>
+                    <select name="deporte" id="deporte" required>
+                        <option label="Selec. Disciplina"></option>
+                        <option id="futblol" value="Futbol">Futbol</option>
+                        <option id="hockey" value="Hockey">Hockey</option>
+                        <option id="polo" value="Polo">Polo</option>
+                        <option id="otras" value="otras">Otras disciplinas</option>
+                    </select>
+                    <label for="otra">Otras disciplinas:</label>
+                    <input type="text" id="otra" placeholder="Disciplina...">
+                </div>
+                <div>
+                    <label for="cantidad">Cantidad</label>
+                    <input type="number" id="cantidad" name="cantidad" placeholder="Cantidad" min="1" max="100"
+                        required>
+                </div>
+                <p>Adjuntá escudo y publicidades</p>
+                <div class="btn_attach">
+                    <input type="file" name="attachment" accept="image/png, image/jpeg, application/pdf">
+                    <span>Adjuntar Archivos...</span>
+                </div>
+                <p>Revisa que todos los datos sean correctos antes de enviar!</p>
+                <p class="advertencia">Luego de presionar enviar, por favor hace click en: <br> <b>"no soy un robot"</b>
+                </p>
+                <button type="submit" class="btn_send">Enviar</button>
+                <button type="reset" class="btn_del">Borrar todo</button>
+            </form>
+        </section>
 
         <!-- botón volver arriba -->
 
@@ -139,42 +139,38 @@
     <!-- pie de página -->
 
     <footer>
-        <div class="container">
-            <div class="row fluid">
-                <div class="col col-sm-3 redes">
-                    <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
-                    <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
-                            class="bi bi-facebook"></i>/maharani.indumentaria</a>
-                    <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
-                            class="bi bi-instagram"></i>/maharani.indumentaria</a>
-                    <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
-                            class="bi bi-twitter"></i>/MaharaniIndume1</a>
-                </div>
-                <div class="col col-sm-3 pago">
-                    <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
-                    <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
-                </div>
-                <div class="col col-sm-3 envio">
-                    <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
-                    <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
-                    <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
-                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
-                        Argentino</a>
-                    <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
-                </div>
-                <div class="col col-sm-3 telefono">
-                    <p><i class="bi bi-phone"></i>Teléfono:</p>
-                    <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
-                                class="bi bi-whatsapp"></i></a>02926 -
-                        15 - 497162</p>
-                </div>
+        <div class="footer__info">
+            <div class="redes">
+                <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
+                <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
+                        class="bi bi-facebook"></i>/maharani.indumentaria</a>
+                <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
+                        class="bi bi-instagram"></i>/maharani.indumentaria</a>
+                <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
+                        class="bi bi-twitter"></i>/MaharaniIndume1</a>
             </div>
-            <div class="row fluid">
-                <div class="copyRigth">
-                    <strong>Maharani Indumentaria &copy; 2022</strong>
-                    <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
-                </div>
+            <div class="pago">
+                <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
+                <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
             </div>
+            <div class="envio">
+                <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
+                <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
+                <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
+                <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
+                    Argentino</a>
+                <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
+            </div>
+            <div class="telefono">
+                <p><i class="bi bi-phone"></i>Teléfono:</p>
+                <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
+                            class="bi bi-whatsapp"></i></a>02926 -
+                    15 - 497162</p>
+            </div>
+        </div>
+        <div class="footer__copyRigth">
+            <strong>Maharani Indumentaria &copy; 2022</strong>
+            <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
         </div>
     </footer>
 
