--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -101,9 +101,8 @@
     <!-- pie de página -->
 
     <footer>
-        <div class="container">
-            <div class="row fluid">
-                <div class="col col-sm-3 redes">
+            <div class="footer__info">
+                <div class="redes">
                     <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
                     <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
                             class="bi bi-facebook"></i>/maharani.indumentaria</a>
@@ -112,11 +111,11 @@
                     <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
                             class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
-                <div class="col col-sm-3 pago">
+                <div class="pago">
                     <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
                     <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
                 </div>
-                <div class="col col-sm-3 envio">
+                <div class="envio">
                     <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
                     <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
                     <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
@@ -124,20 +123,17 @@
                         Argentino</a>
                     <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
                 </div>
-                <div class="col col-sm-3 telefono">
+                <div class="telefono">
                     <p><i class="bi bi-phone"></i>Teléfono:</p>
                     <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
                                 class="bi bi-whatsapp"></i></a>02926 -
                         15 - 497162</p>
                 </div>
             </div>
-            <div class="row fluid">
-                <div class="copyRigth">
-                    <strong>Maharani Indumentaria &copy; 2022</strong>
-                    <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
-                </div>
+            <div class="footer__copyRigth">
+                <strong>Maharani Indumentaria &copy; 2022</strong>
+                <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
             </div>
-        </div>
     </footer>
 
     <!-- scripts -->
