--- a/pages/ind-polo.html
+++ b/pages/ind-polo.html
@@ -28,7 +28,8 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png"
+                        alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +75,6 @@
     </header>
 
     <main>
-        <!-- grid -->
 
         <section class="titulo" data-aos="fade-up">
             <h1>Indumentaria de Polo</h1>
@@ -161,9 +161,9 @@
             <strong>Maharani Indumentaria &copy; 2022</strong>
             <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
         </div>
-</footer>
+    </footer>
 
-  <!-- scripts -->
+    <!-- scripts -->
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
